plugins/scripting/scripting-tests/testData/diagnostics/testScripts/invokeResolve.test.kts
// GRADLE_LIKE_SCRIPT

val projectApi = <!RECURSION_IN_IMPLICIT_TYPES!>projectApi<!> { <!UNRESOLVED_REFERENCE!>it<!> }
